# parking-detector

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: parkingdetector.ini
src/parkingdetector/: __init__.py  __main__.py  analyse.py  classnames.py  cli.py  config.py  detect.py  mask.py  process.py  slack.py  status.py
